--- a/ejemplo_tp/AEDmacros.tex
+++ b/ejemplo_tp/AEDmacros.tex
@@ -165,7 +165,7 @@
 \newcommand{\masmas}{\ensuremath{++}}
 \newcommand{\matriz}[1]{\TLista{\TLista{#1}}}
 \newcommand{\seqchar}{\TLista{\cha}}
-\newcommand{\listavacia}{\lange \rangle}
+\newcommand{\listavacia}{\langle \rangle}
 
 \renewcommand{\lstlistingname}{Código}
 \lstset{% general command to set parameter(s)
