--- a/ejemplo_tp/TP.tex
+++ b/ejemplo_tp/TP.tex
@@ -148,10 +148,10 @@ El cuerpo del ciclo tiene dos instrucciones, que llamaremos $S_c1$ y $S_c2$.
 \begin{eqnarray}
     wp(S_c1;S_c2, I) &\overset{Ax3}{\equiv}& wp(S_c1, wp(S_c2, I)) \notag \\
      &\equiv&  wp(S_c1, wp(i:= i+1, I))\notag \\
-      &\overset{Ax1}{\equiv}& wp(S_c1,def(i+1) \yLuego I_{i}^{i+1}))\notag \\
+      &\overset{Ax1}{\equiv}& wp(S_c1,def(i+1) \yLuego I_{i}^{i+1})\notag \\
       &\equiv&  wp(S_c1, (def(i) \land def(1)) \yLuego 0 \leq \textcolor{blue}{i+1} \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{\textcolor{blue}{i+1}-1} ciudades[j].habitantes \land \notag \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0})) \notag \\
        &\equiv& wp(res:= res + ciudades[i].habitantes, (True \land True) \yLuego \ 0 \leq i+1 \leq |ciudades| \ yLuego \notag \\ & & (res = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes \land \notag \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0})) \notag \\
-       &\overset{Ax1}{\equiv}& ((def(res) \land def(ciudades) \land def(i))\yLuego 0 \leq i < |ciudades|) \yLuego (0 \leq i+1 \leq |ciudades| \ \land \notag  \\ & & \textcolor{blue}{res + ciudades[i].habitantes} = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes \land \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0} \notag \\
+       &\overset{Ax1}{\equiv}& ((def(res) \land def(ciudades) \land def(i))\yLuego 0 \leq i < |ciudades|) \yLuego (0 \leq i+1 \leq |ciudades|) \ \land \notag  \\ & & \textcolor{blue}{res + ciudades[i].habitantes} = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes \land \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0} \notag \\
         &\equiv& (0 \leq i < |ciudades| \ \land \ 0 \leq i+1 \leq |ciudades|) \ \yLuego (res= \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes \land \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}) \notag \\
         wp(S_c1;S_c2, I)  &\equiv& (0 \leq i <|ciudades|) \yLuego (res= \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes \land \notag \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}) \notag 
 \end{eqnarray}
@@ -175,8 +175,9 @@ Ahora vemos la implicación: \\
     \item \parbox[t]{\textwidth}{Como asumimos el antecedente $I \land \neg B$ cierto, podemos reemplazar en la sumatoria.\\ res = $\small \displaystyle \sum_{j=0}^{\textcolor{blue}{|ciudades|}-1} ciudades[j].habitantes$\\
     Además, si reescribimos la sumatoria: \\
     res = $\small \displaystyle \sum_{j=0}^{k-1} ciudades[j].habitantes \ + ciudades[k].habitantes + \small \displaystyle \sum_{j=k+1}^{|ciudades|-1} ciudades[j].habitantes$\\
-    De esta forma:\\
-    (\existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego (ciudades[k].habitantes >  50.000 \land \\res = $\small \displaystyle \sum_{j=0}^{k-1} ciudades[j].habitantes \ + ciudades[k].habitantes + \small \displaystyle \sum_{j=k+1}^{|ciudades|-1} ciudades[j].habitantes$)}\land \\ \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}}
+    De esta forma, sabemos por asumir el antecedente verdadero:\\
+    \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego (ciudades[j].habitantes \geq 0 \land \\ \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego (ciudades[k].habitantes >  50.000 \land \\res = $\small \displaystyle \sum_{j=0}^{k-1} ciudades[j].habitantes \ + ciudades[k].habitantes + \small \displaystyle \sum_{j=k+1}^{|ciudades|-1} ciudades[j].habitantes$)})} \\\\ }
+    Veamos que los limites de las sumatorias nunca se indefinen:
     \item \parbox[t]{\textwidth}{Como $k <|ciudades| \implica k-1<|ciudades|$ se ve que nunca se indefine ningun termino de la sumatoria. \\
     \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0} \implica  \displaystyle \sum_{j=0}^{k-1} ciudades[j].habitantes \geq 0}
      \item \parbox[t]{\textwidth}{Como $0\leq k \implica 0\leq k+1, y \ k<|ciudades| \implica k+1\leq|ciudades|$, se ve que nunca se indefine ningun termino de \\ la sumatoria(a lo mucho el rango es vacío si $k+1= |ciudades|$). \\
